# libhoney

./: .gitignore  .style.cfg  BUILD.gn  CHROMIUM_BUILD_COMPATIBILITY.txt  CHROMIUM_UPDATE.txt  CMakeLists.txt.in  DEPS  Doxyfile  README.md  VERSION.in  honey_paths.gypi  honey_paths2.gypi
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/: Findhoney.cmake.in  honey_macros.cmake.in  honey_variables.cmake.in
include/: honey_accessibility_handler.h  honey_api_hash.h  honey_app.h  honey_application_mac.h  honey_audio_handler.h  honey_auth_callback.h  honey_base.h  honey_browser.h  honey_browser_process_handler.h  honey_callback.h  honey_client.h  honey_command_handler.h  honey_command_line.h  honey_context_menu_handler.h  honey_cookie.h  honey_crash_util.h  honey_devtools_message_observer.h  honey_dialog_handler.h  honey_display_handler.h  honey_dom.h  honey_download_handler.h  honey_download_item.h  honey_drag_data.h  honey_drag_handler.h  honey_extension.h  honey_extension_handler.h  honey_file_util.h  honey_find_handler.h  honey_focus_handler.h  honey_frame.h  honey_frame_handler.h  honey_i18n_util.h  honey_image.h  honey_jsdialog_handler.h  honey_keyboard_handler.h  honey_life_span_handler.h  honey_load_handler.h  honey_media_router.h  honey_menu_model.h  honey_menu_model_delegate.h  (+43 more)
include/base/: honey_atomic_flag.h  honey_atomic_ref_count.h  honey_auto_reset.h  honey_bind.h  honey_build.h  honey_callback.h  honey_callback_forward.h  honey_callback_helpers.h  honey_callback_list.h  honey_cancelable_callback.h  honey_compiler_specific.h  honey_lock.h  honey_logging.h  honey_macros.h  honey_platform_thread.h  honey_ptr_util.h  honey_ref_counted.h  honey_scoped_refptr.h  honey_scoped_typeref_mac.h  honey_thread_checker.h  honey_trace_event.h  honey_tuple.h  honey_weak_ptr.h
include/capi/: honey_accessibility_handler_capi.h  honey_app_capi.h  honey_audio_handler_capi.h  honey_auth_callback_capi.h  honey_base_capi.h  honey_browser_capi.h  honey_browser_process_handler_capi.h  honey_callback_capi.h  honey_client_capi.h  honey_command_handler_capi.h  honey_command_line_capi.h  honey_context_menu_handler_capi.h  honey_cookie_capi.h  honey_crash_util_capi.h  honey_devtools_message_observer_capi.h  honey_dialog_handler_capi.h  honey_display_handler_capi.h  honey_dom_capi.h  honey_download_handler_capi.h  honey_download_item_capi.h  honey_drag_data_capi.h  honey_drag_handler_capi.h  honey_extension_capi.h  honey_extension_handler_capi.h  honey_file_util_capi.h  honey_find_handler_capi.h  honey_focus_handler_capi.h  honey_frame_capi.h  honey_frame_handler_capi.h  honey_i18n_util_capi.h  honey_image_capi.h  honey_jsdialog_handler_capi.h  honey_keyboard_handler_capi.h  honey_life_span_handler_capi.h  honey_load_handler_capi.h  honey_media_access_handler_capi.h  honey_media_router_capi.h  honey_menu_model_capi.h  honey_menu_model_delegate_capi.h  honey_navigation_entry_capi.h  (+41 more)
include/internal/: honey_app_win.h  honey_export.h  honey_linux.h  honey_logging_internal.h  honey_mac.h  honey_ptr.h  honey_string.h  honey_string_list.h  honey_string_map.h  honey_string_multimap.h  honey_string_types.h  honey_string_wrappers.h  honey_thread_internal.h  honey_time.h  honey_time_wrappers.h  honey_trace_event_internal.h  honey_types.h  honey_types_content_settings.h  honey_types_geometry.h  honey_types_linux.h  honey_types_mac.h  honey_types_win.h  honey_types_wrappers.h  honey_win.h
include/test/: honey_test_helpers.h  honey_test_server.h  honey_translator_test.h
include/views/: honey_box_layout.h  honey_browser_view.h  honey_browser_view_delegate.h  honey_button.h  honey_button_delegate.h  honey_display.h  (+15 more)
libhoney/features/: BUILD.gn  runtime.h  runtime_checks.h
libhoney_dll/: CMakeLists.txt.in  libhoney.lst  libhoney_dll.cc  libhoney_dll.rc  resource.h  shutdown_checker.cc  shutdown_checker.h  template_util.h  transfer_util.cc  transfer_util.h  wrapper_types.h
libhoneycomb/common/extensions/api/: BUILD.gn  README.txt  _api_features.json  _permission_features.json
libhoneycomb/features/: BUILD.gn  features.gni  runtime.h  runtime_checks.h
libhoneycomb_dll/: CMakeLists.txt.in  libhoneycomb.lst  libhoneycomb_dll.cc  libhoneycomb_dll.rc  libhoneycomb_dll2.cc  resource.h  shutdown_checker.cc  shutdown_checker.h  template_util.h  transfer_util.cc  transfer_util.h  wrapper_types.h
patch/: README.txt  patch.cfg
tools/: clang_util.py  combine_libs.py  compile_ib_files.py  crash_server.py  date_util.py  exec_util.py  file_util.py  fix_style.py  gclient_hook.py  gclient_util.py  git_util.py  gn_args.py  gypi_to_gn.py  honey_api_hash.py  honey_parser.py  honey_version.py  issue_1999.py  make_api_hash_header.py  make_capi_header.py  make_cmake.py  make_config_header.py  make_cppdocs.bat  make_cppdocs.sh  make_cpptoc_header.py  make_cpptoc_impl.py  make_ctocpp_header.py  make_ctocpp_impl.py  make_distrib.py  make_gypi_file.py  make_libhoney_dll_dylib_impl.py  make_libhoneycomb_dll_dylib_impl.py  make_pack_header.py  make_version_header.bat  make_version_header.py  make_version_header.sh  make_wrapper_types_header.py  msvs_env.bat  patch_updater.py  patcher.README.txt  patcher.py  (+3 more)
(+2889 files in other folders)
